--- a/dance.html
+++ b/dance.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <style type="text/css">
-  html { height: 100% }
-  body { height: 100%; margin: 0 auto; padding: 0px; width: 1000px; text-align:center; }
+  html { height: 100%; background-color: grey; }
+  body { height: 100%; margin: 0 auto; padding: 0px; width: 1000px; text-align:center; background-color: white; box-shadow: 0 0 15px #000;}
   div { font-family: Arial; font-size:14px; text-align:center;}
   a { color: black; font-size: 11px; font-family: Verdana;}
   p { margin: 0px; font-family: Verdana; font-size: 11px; auto-margin: left; auto-margin: right;}
