--- a/dance.html
+++ b/dance.html
@@ -158,6 +158,7 @@ var search_url='http://api.zappos.com/Search?filters={"brandNameFacet":["Spirit%
         <div id="turn">turn</div>
         <div id="girls">Everybody DANCE!</div>
     </div>-->
+    <audio src="animal.ogg" autoplay loop controls>
 </body>
 </html>
 
