remove default img

--- a/dance.html
+++ b/dance.html
@@ -152,7 +152,7 @@ var search_url='http://api.zappos.com/Search?filters={"brandNameFacet":["Spirit%
         <div id="description">Click on your favorite animal to make them dance!</div>
     </div>
     <div id="results"></div>
-    <img id="dancer" src="http://www.zappos.com/images/z/1/5/4/1545838-1-MULTIVIEW.jpg">
+    <img id="dancer"><!-- src="http://www.zappos.com/images/z/1/5/4/1545838-1-MULTIVIEW.jpg"-->
     <br><br>
     <p>Powered by the <a href="http://developers.zappos.com" target="new">Zappos API</a>.</p>
     <p>Compatible with Google Chrome, and perhaps ONLY Google Chrome. Sowwie, I'm not a hipster front-end developer.</p>
