--- a/dance.html
+++ b/dance.html
@@ -180,8 +180,8 @@ var search_url='http://api.zappos.com/Search?filters={"brandNameFacet":["Spirit%
         <div id="twist-right">twist to the right</div>
         <div id="turn">turn</div>
         <div id="girls">Everybody DANCE!</div>
-    </div>
-    <audio src="animal.ogg" autoplay loop controls> -->
+    </div>-->
+    <audio src="animal.ogg" loop controls> 
 </body>
 </html>
 
