--- a/dance.html
+++ b/dance.html
@@ -199,8 +199,10 @@ var search_url='http://api.zappos.com/Search?filters={"brandNameFacet":["Spirit%
         <div id="turn">spinny-spin!</div>
     </div>
     <br><br>
+    <a href="http://twitter.com/share" class="twitter-share-button" data-text="Can't. Stop. Dancing! http://crystal.no.de/dance" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <p>Powered by the <a href="http://developers.zappos.com" target="new">Zappos API</a>.</p>
     <p>Compatible with Google Chrome, and perhaps ONLY Google Chrome. Sowwie, I'm not a hipster front-end developer.</p>
+    
     <br><br>
     <audio src="animal.ogg" loop controls> 
 </body>
