--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
     <meta context="text/html; charset=UTF-8">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-22614011-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body align=center>
 <br><br>
@@ -14,6 +27,6 @@ Do you like to dance?  I like to <a href="/dance">dance</a>.
 <br>
 <br>
 <br>
-@crystalschang
+twitter:<a href="http://www.twitter.com/crystalschang">@crystalschang</a>
 </body>
 </html>
