--- a/dance.html
+++ b/dance.html
@@ -247,8 +247,8 @@
 </head>
 <body onload="initialize()">
     <div id="title">
-        SPIRIT HOOD DANCERZ
-        <div id="description">Click on your favorite animal to make them dance!</div>
+        SPIRIT DANCERZ
+        <div id="description">Click on your favorite item to give it some spirit!</div>
     </div>
     <div id="search-container">
         <form id="search">
